Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33290

CMake toolchainFile preset value appears to be ignored

XMLWordPrintable

    • b1eb6e5c7 (17.0)

      The `toolchainFile` option in a `configurePreset` does not appear to be parsed.
      Maybe it is being deliberately stripped out, due to other toolchain-related issues (e.g. QTCREATORBUG-20392) ?

      An example where the `toolchainFile` is actually set to a non-existent file would cause an error with "cmake --preset default", but Qt Creator accepts it.

      (cmake 4)

        1. CMakeLists.txt
          0.1 kB
        2. CMakePresets.json
          0.3 kB
        For Gerrit Dashboard: QTCREATORBUG-33290
        # Subject Branch Project Status CR V

            cadam Cristian Adam
            chardrazle Richard Hazlewood
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes