CMakePM: Allow project failure when toolchainFile is missing

The code would just skip setting an non existing toolchain_file.cmake to
CMAKE_TOOLCHAIN_FILE parameter when using CMake Presets.

This would create a working project but with a different setup than
expected.

Fixes: QTCREATORBUG-33290
Change-Id: I5f6e483d882b09edc198403ce37d79afd45f17df
Reviewed-by: Marcus Tillmanns <marcus.tillmanns@qt.io>